--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.0.12",
     "next": "^14.2.14",
     "next-intl": "^3.17.2",
+    "next-pwa": "^5.6.0",
     "next-remove-imports": "^1.0.12",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
