--- a/package.json
+++ b/package.json
@@ -44,11 +44,9 @@
     "react-swipeable": "^7.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-topbar-progress-indicator": "^4.1.1",
-    "simple-line-icons": "^2.5.5",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "zustand": "^4.5.0"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
