feat(manifest): update icons configuration for better compatibility

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,15 +4,21 @@
   "description": "Personal Portfolio, I'am  Passionate about crafting seamless web experiences, I specialize in building efficient, scalable, and attractive web applications. Bringing digital dreams to life",
   "icons": [
     {
+      "src": "/favicon/light-48.png",
+      "sizes": "48x48",
+      "purpose": "any",
+      "type": "image/png"
+    },
+    {
       "src": "/favicon/light-144.png",
       "sizes": "144x144",
-      "purpose": "maskable any",
+      "purpose": "any",
       "type": "image/png"
     },
     {
       "src": "/favicon/light-512.png",
       "sizes": "512x512",
-      "purpose": "maskable any",
+      "purpose": "any",
       "type": "image/png"
     }
   ],
