update: env.local variable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Site URL
+NEXT_PUBLIC_SITE_URL=https://dwiiwjaya.com
+
 # Email.js
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=
 NEXT_PUBLIC_EMAILJS_TEMPLATE_CONTACT_ID=
@@ -12,9 +15,6 @@ PAGESPEED_PAGEWEB_URL=
 
 # API URL
 API_URL=
-
-# Site URL
-NEXT_PUBLIC_SITE_URL=
 
 # Supabase
 SUPABSE_SERVICE_ROLE=
