fix: dashboard pagespeed api key

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Site URL
-NEXT_PUBLIC_SITE_URL=https://dwiiwjaya.com
+NEXT_PUBLIC_SITE_URL=
 
 # Email.js
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=
@@ -9,6 +9,12 @@ NEXT_PUBLIC_EMAILJS_SERVICE_ID=
 
 # Github
 GITHUB_TOKEN_PERSONAL=
+
+# Google 
+GOOGLE_CLIENT_ID=
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=
+NEXT_PUBLIC_GOOGLE_PAGESPEED_KEY=
+
 
 # Pagespeed
 PAGESPEED_PAGEWEB_URL=
