--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@next/bundle-analyzer": "^15.3.1",
     "@popperjs/core": "^2.11.8",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.49.4",
