chore: im forgot add manifest file ehe

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,44 @@
 {
   "name": "Dwi Wijaya - Personal Website",
   "short_name": "Dwi Wijaya",
-  "description": "Personal Portfolio, I'am  Passionate about crafting seamless web experiences, I specialize in building efficient, scalable, and attractive web applications. Bringing digital dreams to life",
+  "description": "Personal Portfolio. I am passionate about crafting seamless web experiences, specializing in building efficient, scalable, and attractive web applications. Bringing digital dreams to life.",
   "icons": [
     {
       "src": "/favicon/light-48.png",
       "sizes": "48x48",
-      "purpose": "any",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/favicon/light-144.png",
       "sizes": "144x144",
-      "purpose": "any",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon/light-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/favicon/light-512.png",
       "sizes": "512x512",
-      "purpose": "any",
-      "type": "image/png"
-    },
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
     {
       "src": "images/screenshot-desktop.png",
       "sizes": "1268x916",
       "type": "image/png",
       "form_factor": "wide"
+    },
+    {
+      "src": "images/screenshot-mobile.png",
+      "sizes": "815x380",
+      "type": "image/png"
     }
   ],
   "start_url": "/",
