--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.49.4",
     "@uiw/react-md-editor": "^4.0.5",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
@@ -44,6 +42,7 @@
     "react-swipeable": "^7.0.2",
     "react-syntax-highlighter": "^15.6.1",
     "react-topbar-progress-indicator": "^4.1.1",
+    "sharp": "^0.34.1",
     "slick-carousel": "^1.8.1",
     "swr": "^2.3.3",
     "tailwind-scrollbar-hide": "^2.0.0"
@@ -52,7 +51,8 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.1.4",
+    "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "3.3.5"
   }
 }
