--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,28 +4,14 @@
   "description": "Personal Portfolio. I am passionate about crafting seamless web experiences, specializing in building efficient, scalable, and attractive web applications. Bringing digital dreams to life.",
   "icons": [
     {
-      "src": "/favicon/light-48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/favicon/light-144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/favicon/light-180.png",
-      "sizes": "180x180",
-      "type": "image/png",
-      "purpose": "any"
+      "src": "/favicon/light-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "/favicon/light-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ],
   "screenshots": [
