--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.3.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.18.2",
     "next": "^14.2.28",
