--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Site URL
-NEXT_PUBLIC_SITE_URL=https://rawr-git-main-yogikids-projects.vercel.app/
+NEXT_PUBLIC_SITE_URL=https://rawr-sigma.vercel.app
 
 # Email.js
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=zvXySYTJBs3SLYuvQ
@@ -11,7 +11,7 @@ NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_17cf46m
 GITHUB_TOKEN_PERSONAL=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
 
 # Pagespeed
-PAGESPEED_PAGEWEB_URL=https://rawr-git-main-yogikids-projects.vercel.app/
+PAGESPEED_PAGEWEB_URL=https://rawr-sigma.vercel.app/
 
 # API URL
 API_URL=
